<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UmeyeSDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="positive">确定</string>
    <string name="cancel">取消</string>

    <!-- 登陆返回的各种状态码 -->
    <string name="UNKNOWN_ERROR">未知错误</string>
    <string name="LOGIN_OK">登陆成功</string>
    <string name="no_right_login">无权限登录帐号</string>
    <string name="NPC_D_MPI_MON_ERROR_SYS_ERROR">系统错误</string>
    <string name="NPC_D_MPI_MON_ERROR_CONNECT_FAIL">连接失败</string>
    <string name="NPC_D_MPI_MON_ERROR_USERID_ERROR">用户名错误</string>
    <string name="NPC_D_MPI_MON_ERROR_USERPWD_ERROR">密码错误</string>
    <string name="NPC_D_MPI_MON_ERROR_USER_PWD_ERROR">用户名或密码错误</string>
    <string name="NPC_D_MPI_MON_ERROR_CONNECTING">正在连接</string>
    <string name="NPC_D_MPI_MON_ERROR_CONNECTED">已连接</string>
    <string name="NPC_D_MPI_MON_ERROR_PLAY_FAIL">播放失败</string>
    <string name="NPC_D_MPI_MON_ERROR_FILE_NONENTITY">文件不存在</string>
    <string name="NPC_D_MPI_MON_ERROR_EXEC_ORDER_CALL_FAIL">执行命令调用失败</string>
    <string name="NPC_D_MPI_MON_ERROR_EXEC_ORDER_RET_FAIL">执行命令结果失败</string>
    <string name="NPC_D_MPI_MON_ERROR_ALLOC_RES_FAIL">分配资源失败</string>
    <string name="NPC_D_MPI_MON_ERROR_NO_CONNECT_CAMERA">未连接摄像机</string>
    <string name="NPC_D_MPI_MON_ERROR_INNER_OP_FAIL">内部操作失败</string>
    <string name="NPC_D_MPI_MON_ERROR_PLAYING">正在播放</string>
    <string name="NPC_D_MPI_MON_ERROR_NO_PLAY">未播放</string>
    <string name="NPC_D_MPI_MON_ERROR_NONSUP_VENDOR">不支持的厂家</string>
    <string name="NPC_D_MPI_MON_ERROR_REJECT_ACCESS">权限不够</string>
    <string name="NPC_D_MPI_MON_ERROR_CAMERA_OFFLINE">摄像机离线</string>
    <string name="NPC_D_MPI_MON_ERROR_ACCOUNT_LOGINED">帐号已登录</string>
    <string name="NPC_D_MPI_MON_ERROR_ACCOUNT_HAVE_EXPIRED">用户帐号已过有效期</string>
    <string name="NPC_D_MPI_MON_ERROR_ACCOUNT_NO_ACTIVE">用户帐号未激活</string>
    <string name="NPC_D_MPI_MON_ERROR_ACCOUNT_DEBT_STOP">用户帐号已欠费停机</string>
    <string name="NPC_D_MPI_MON_ERROR_TIMESECT_NOT_ALLOW_CAMERA">该时间段不允许访问该摄像机</string>
    <string name="loading">正在加载..</string>
    <string name="login_succeed_no_data">登录成功，没有设备！</string>
    <string name="loadingText">请稍后!</string>
    <string name="devicelist">设备列表</string>
    <string name="add_device">添加设备</string>
    <string name="more">更多</string>
    <string name="function">功能</string>
    <string name="add_succeed">添加成功</string>
    <string name="add_failed">添加失败</string>
    <string name="delete_device">删除设备</string>
    <string name="delete_succeed">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="usererro">用户名错误</string>
    <string name="passworderro">密码错误</string>
    <string name="time_out">连接超时</string>
    <string name="loginfail">登陆服务器失败</string>
    <string name="ready">准备就绪</string>
    <string name="save">保存</string>
    <string name="Isnotonline">采集点不在线</string>
    <string name="networkerro">网络错误</string>
    <string name="nodataerro">无数据</string>
    <string name="error_code">错误代码</string>
    <string name="read">就绪</string>
    <string name="playing">播放中……</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="stopping">停止中……</string>
    <string name="connect_success">连接成功</string>
    <string name="connect_fail">连接失败</string>
    <string name="connecting">连接中……</string>
    <string name="buffering">缓冲中……</string>
    <string name="no_data">网络中无数据</string>
    <string name="unknown_error">未知错误</string>
    <string name="protocal_error">协议错误</string>
    <string name="net_error">网络错误</string>
    <string name="exception_error">异常情况</string>
    <string name="unsupport_device">不支持设备</string>
    <string name="max_channel">超过最大通道数</string>
    <string name="camera_offline">采集点不在线 </string>
    <string name="reconnect">重新连接</string>
    <string name="portserver">端口映射</string>
    <string name="search_hint">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="file_name">文件名</string>
    <string name="event_type">事件类型</string>
    <string name="load">加载</string>
    <string name="searching">搜索中……</string>
    <string name="start_big_end">结束时间必须大于开始时间</string>
    <string name="not_found_record">没有搜索到符合条件的记录</string>
    <string name="alarm_move">移动侦测</string>
    <string name="alarm_action_sensor">灵敏度(1~6)</string>
    <string name="get_parameters_failed">获取设备参数失败</string>
    <string name="modify_user">修改名称</string>
    <string name="modify_pass">修改密码</string>
    <string name="modify_device_name">设备名:</string>
    <string name="modify_ip">修改IP地址</string>
    <string name="dev_mac">MAC：</string>
    <string name="search_netmask">子网掩码：</string>
    <string name="search_ip">IP地址：</string>
    <string name="search_getway">网关：</string>
    <string name="old_password">原密码：</string>
    <string name="new_password">新密码：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="user_alias">名称：</string>
    <string name="input_not_empty">输入不能为空</string>
    <string name="DHCP">DHCP：</string>
    <string name="state">状态：</string>
    <string name="on">开启</string>
    <string name="off">关闭</string>
    <string name="wifi_info">当前设备wifi：%1$s \nIP地址：%2$s \n子网掩码：%3$s \n网关：%4$s</string>
    <string name="dev_time">设备时间</string>
    <string name="get_dev_ip">获取设备IP</string>
    <string name="get_failed">获取设备信息失败</string>
    <string name="get_dev_time">获取设备时间</string>
    <string name="get_dev_storage">获取设备储存信息</string>
    <string name="dev_code">设备编码</string>
    <string name="get_dev_code">获取设备编码信息</string>
    <string name="dev_storage">设备储存管理</string>
    <string name="dev_storage_format_s">序号：%1$s的储存分区格式化成功\n</string>
    <string name="dev_storage_format_f">序号：%1$s的储存分区格式化失败\n</string>
    <string name="dev_storage_format">正在格式化&#8230;\n</string>
    <string name="dev_storage_format_c">确定要格式化吗</string>
    <string name="multiCh">多通道设置</string>
    <string name="smartLink">WIFI快配</string>
    <string name="change_dev_pwd">修改设备密码</string>
    <string name="set_ok">设置成功</string>
    <string name="set_fail">设置失败</string>
    <string name="wifi_synac_to_device">设置WIFI到设备</string>
    <string name="wifi_search">重新搜索WIFI</string>
    <string name="wifi_stop">关闭设备WIFI</string>
    <string name="wifi_set_ip">设置IP</string>
    <string name="wifi_enter_ssid">请输入WIFI名称</string>
    <string name="wifi_enter_pass">请输入WIFI密码</string>
    <string name="wifi_show_pass">明文</string>
    <string name="wifi_auto_get_ip">自动获取IP</string>
    <string name="negative">取消</string>
    <string name="main_category_video">Video Records</string>
    <string name="delete">Delete</string>
    <string name="pleaseCheck">请选择</string>
    <string name="delete_success">删除成功</string>
    <string name="searching_device">正在搜索...</string>
    <string name="add_search_local_device">本地设备列表</string>
    <string name="Imsi">000</string>
    <string name="edit">Edit</string>
    <string name="selectorAll">Selected All</string>
    <string name="server">服务器:</string>
    <string name="port">端口:</string>
    <string name="search">搜索设备</string>
    <string name="umid">UMID:</string>
    <string name="user">用户名:</string>
    <string name="password">密码:</string>
    <string name="wifi_searching">搜索WIFI列表...</string>
    <string name="get_wifi_info">获取WIFI信息...</string>
    <string name="get_wifi_failed">获取WIFI信息失败</string>
    <string name="delete_video">Sure delete this video?</string>
    <string name="message">Message</string>
    <string name="Okao">Ok</string>
    <string name="none_files">No files in directory</string>
    <string name="loading_list">Loading</string>
    <string name="wait_list">Please Wait……</string>
    <string name="NoSdcard">No SDcard install</string>
    <string name="mainSavedphotos">Photos</string>
    <string name="login_mode">账户登录</string>
    <string name="local_mode">免登录</string>
    <string name="wechat_mode">微信登录</string>
    <string name="umid_connect_mode">umid直连模式</string>
    <string name="enter_user_name">请输入用户名</string>
    <string name="hint_password">密码</string>
    <string name="enter_password">请输入密码</string>
    <string name="enter_server">请输入服务器</string>
    <string name="clearLog">清除日志</string>
    <string name="play_m3u8">播放 M3U8</string>
    <string name="door_pwd">门铃密码</string>
    <string name="lock_pwd">开锁密码</string>
    <string name="device_option">设备设置</string>
    <string name="img_setting">抓拍机设置</string>
    <string name="unlocking_fail">密码输入错误</string>
    <string name="unlocking_success">密码匹配成功</string>
    <string name="input_error_contains_space">开锁密码不能包含空格!</string>
    <string name="input_error_length_error">开锁密码必须为八位数字</string>
    <string name="audio">声音</string>
    <string name="modify_success">修改成功</string>
    <string name="pir_time">PIR 时间</string>
    <string name="power_mode">省电模式</string>
    <string name="login_success">登录成功</string>\
    <string name="logout_user">账号已登出，请重新登录</string>
    <string name="not_support_api">不支持此功能!</string>
    <string name="format_err">格式错误，请修改以后再重试！</string>
    <string name="outdate_relogin">已过期,请重新登录</string>
    <string name="verify_failed">验证失败</string>
    <string name="username_nonexistent">该用户名不存在</string>
    <string name="uid_exits_not_add_dev">UID已存在，不能添加设备！</string>
    <string name="register_fail_by_errcode">注册失败，验证码错误</string>
    <string name="email_address_error2">邮箱地址错误</string>
    <string name="request_too_many_times">请求次数太多，请稍候再试！</string>
    <string name="network_err">网络异常，请检查网络</string>
    <string name="unknown_errors">未知错误</string>
    <string name="no_records">无录像</string>


    <string name="cloud_service">云服务</string>
    <string name="check_order">查询名单</string>
    <string name="order_list">订单列表</string>
    <string name="ys_statement">云存储服务说明</string>
    <string name="fail_to_getcloud_service">获取云存储服务失败！</string>
    <string name="playback">回放</string>
    <string name="start_bes_low_current">The start time must be less than the current time</string>
    <string name="select_channel">Select channel</string>
    <string name="snap">Snap</string>
    <string name="local_image">本地图片</string>
    <string name="local_video">本地录像</string>
    <string name="search_wifi">搜索WIFI</string>
    <string name="door_pwd_setting">门铃密码设置</string>
    <string name="motion">移动侦测</string>
    <string name="alarm_setting">设备布防</string>

    <string-array name="pir_time">
        <item>1s</item>
        <item>5s</item>
        <item>10s</item>
        <item>20s</item>
        <item>30s</item>
        <item>60s</item>
    </string-array>
    <string-array name="open_array">
        <item>关闭</item>
        <item>开启</item>
    </string-array>
    <string-array name="record_event_type">
        <item>全部录像</item>
        <item>定时录像</item>
        <item>手动录像</item>
        <item>移动录像</item>
        <item>探头报警</item>
    </string-array>
    <string-array name="array_power_mode">
        <item>正常模式</item>
        <item>深度省电模式</item>
        <item>夜间省电模式</item>
    </string-array>



</resources>