<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <EditText
                android:id="@+id/et_server"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_server"
                android:inputType="text"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/front_input" />

            <Button
                android:id="@+id/btn_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:onClick="modifyServer"
                android:text="@string/Okao" />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_user"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/enter_user_name"
            android:inputType="text"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/front_input" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/front_input" />

        <Button
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"
            android:text="@string/login_mode" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick1"
            android:text="@string/local_mode" />

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick2"
            android:text="@string/umid_connect_mode" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="clearLog"
            android:text="@string/clearLog" />

        <TextView
            android:id="@+id/log_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_marginTop="5dp" />
    </LinearLayout>

</ScrollView>