<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    android:background="@color/backgroud_color"
    android:orientation="vertical" >

    <!-- 这里是标题 -->

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@drawable/top_backgroud"
        android:padding="5dip" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="40dip"
            android:layout_height="32dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back_btn" />
   

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="marquee"
            android:gravity="center"
            android:shadowColor="#0f0f0f"
            android:shadowDx="-1.5"
            android:shadowDy="-1.5"
            android:shadowRadius="1.0"
            android:singleLine="true"
            android:text="@string/search_result"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible" >
        </TextView>
        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/search_device"
            android:visibility="gone" >
        </ImageButton>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlHead"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/rlTitle"
        android:layout_marginTop="1dp"
        android:background="@color/front_black" >

        <TextView
            android:id="@+id/tvRange"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/file_name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvEnd"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingRight="20dp"
            android:text="@string/end_time"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvStart"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/tvEnd"
            android:gravity="center_vertical"
            android:paddingRight="40dp"
            android:text="@string/start_time"
            android:textColor="@color/white" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lvResult"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/rlHead"
        android:layout_marginBottom="0dp"
          android:divider="@color/front_black"
          android:dividerHeight="1dp"
        android:cacheColorHint="@android:color/transparent"
        android:listSelector="@android:color/transparent" />

</RelativeLayout>