<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"
    android:orientation="vertical" >

    <!-- 顶部 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_backgroud"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/alarm_move"
            android:textColor="@color/front_white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/back_btn" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <RelativeLayout
            android:id="@+id/rl_action_toggle"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_bg" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
        
                android:text="@string/alarm_move"
                android:textColor="@color/front_input"
                android:textSize="16sp" />

            <ToggleButton
                android:id="@+id/toggle_action_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/ck_toggle"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_sensor_level"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_bg" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/alarm_action_sensor"
                android:textColor="@color/front_input"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/tv_sensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:drawableRight="@drawable/item_arrow"
                android:background="@null"
                android:gravity="center"
                android:text="3"
                android:textColor="@color/front_input"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/fragment_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:visibility="gone" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_alert_setting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone" >
    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/front_black"
        android:textSize="20sp" />

</LinearLayout>